# Opengl4AndroidDemo

./: README.md
app/: CMakeLists.txt  OpenGL ES 3.0着色语言基础知识  OpenGL ES 3.0着色语言基础知识2  build.gradle
app/src/androidTest/java/com/jeryzhang/opengl/opengl4androiddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shader/: fragment_texture.glsl  vertex_texture.glsl
app/src/main/cpp/: drawPoint.cpp  native_color.cpp  native_color.h  native_simple.cpp  native_simple.h
app/src/main/java/com/jeryzhang/opengl/opengl4androiddemo/activity/: MainActivity.java
app/src/main/java/com/jeryzhang/opengl/opengl4androiddemo/ndk/: NativeColorRenderer.java  NativeSimpleRenderer.java
app/src/main/java/com/jeryzhang/opengl/opengl4androiddemo/render/: ColorRender.java  RectangleRenderer.java  SimpleRenderer.java  UniformRenderer.java
app/src/main/java/com/jeryzhang/opengl/opengl4androiddemo/util/: ResReadUtils.java  ShaderUtils.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jeryzhang/opengl/opengl4androiddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
